--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -12,19 +12,17 @@ concurrency:
 jobs:
   test:
     runs-on: macos-14
-    # Kill the task if not finished after 60 minutes
-    timeout-minutes: 60
 
     steps:
+    - name: Debugging 1
+      run: |
+        java --version
+        echo $JAVA_HOME
+
     - name: Check out Git repository
       uses: actions/checkout@v4
       with:
         fetch-depth: 1
-
-    - name: Install Node.js, NPM and Yarn
-      uses: actions/setup-node@v4
-      with:
-        node-version: 22
 
     # Use the Android command line tools to download an AOSP emulator image, and setup new avd
     # The name of the device for testing has to be the same as on the .detoxrc.js file (even if it is not a Pixel)
