--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -1,85 +1,19 @@
 name: e2e-Android
 on:
   workflow_dispatch:
+  push:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  # cancel-in-progress: true
     
 jobs:
-  checksecret:
-    name: check for oauth client
-    runs-on: macos-latest
-    outputs:
-      is_SECRETS_PRESENT_set: ${{ steps.checksecret_job.outputs.is_SECRETS_PRESENT_set }}
-    steps:
-      - name: Check whether unity activation requests should be done
-        id: checksecret_job
-        env:
-            SECRETS_PRESENT: ${{ secrets.OAUTH_CLIENT_SECRET }}
-        run: |
-            echo "is_SECRETS_PRESENT_set: ${{ env.SECRETS_PRESENT != '' }}"
-            echo "::set-output name=is_SECRETS_PRESENT_set::${{ env.SECRETS_PRESENT != '' }}"
-
-  test:
-    needs: checksecret
-    if: needs.checksecret.outputs.is_SECRETS_PRESENT_set == 'true'
-    runs-on: macos-latest
-    # Kill the task if not finished after 60 minutes
-    timeout-minutes: 60
+  build_and_test: 
+    runs-on: ubuntu-24.04-m
 
     steps:
     - name: Check out Git repository
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 1
-
-    - name: Install Node.js, NPM and Yarn
-      uses: actions/setup-node@v4
-      with:
-        node-version: 22
-
-    # Use the Android command line tools to download an AOSP emulator image, and setup new avd
-    # The name of the device for testing has to be the same as on the .detoxrc.js file (even if it is not a Pixel)
-    # The mac-os latest runner has 3 different versions of Java pre-installed (8,11,17), and there were errors when setting to use either 11 or 17 explicitly here
-    # I am assuming (but haven't tested) it uses 8 and then this step works
-    - name: Download Android Emulator Image
-      run: |
-        echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install "system-images;android-31;default;x86_64"
-        echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd --force --name Pixel_5_API_31_AOSP --device "Nexus 5X" -k 'system-images;android-31;default;x86_64'
-        $ANDROID_HOME/emulator/emulator -list-avds
-
-    - name: Cache node modules
-      uses: actions/cache@v4
-      id: cache
-      with:
-        path: node_modules
-        key: node-modules-${{ hashFiles('**/package-lock.json') }}
-  
-    - name: Rebuild detox from cache
-      if: steps.cache.outputs.cache-hit == 'true'
-      # Currently, (Detox 20) those two commands are macOS only
-      run: npx detox clean-framework-cache && npx detox build-framework-cache
-
-    # supposedly our current cache includes native modules like Realm
-    # that have compiled binaries specific to the environment where they were installed
-    # which might not be the same as the github actions environment
-    # so we need to rebuild them
-    - name: Rebuild native modules
-      if: steps.cache.outputs.cache-hit == 'true'
-      run: npm rebuild
-
-    - name: Install Dependencies
-      if: steps.cache.outputs.cache-hit != 'true'
-      run: npm install
-
-      # We need these files to be present in the correct location for the build to succeed.
-      # TODO: this might potentially break the build if there are no actual keys in the example files
-      # it did so on iOS.
-    - name: Create google-services.json files from example
-      run: |
-        cp android/app/google-services.example.json android/app/src/debug/google-services.json
-        cp android/app/google-services.example.json android/app/src/release/google-services.json
 
     # Generate the secret files needed for a release build
     - name: Create .env file
@@ -108,60 +42,68 @@ jobs:
       run: mv release.keystore android/app/release.keystore
 
     # Download the example model otherwise an error alert will be shown on app start, requires .env
-    - name: Download the small example cv and geomodel
-      run: npm run add-example-model -- -f=main
+    - name: Download the small example cv and geomodel & dependencies
+      run: |
+        export MAESTRO_VERSION="2.0.8"; curl -Ls "https://get.maestro.mobile.dev" | bash
+        $HOME/.maestro/bin/maestro --help
+        npm ci
+        npm run add-example-model -- -f=main
 
-    # Macos-latest runner has 3 Java versions pre-installed, if not specified as here, the build step errors with requiring at least Java 11 or higher
-    # So, this step is needed for the apk build step, but somehow this is breaking emulator setup, so it is placed here
-    - name: Set up JDK 11
-      uses: actions/setup-java@v4
+    - name: Enable KVM
+      run: |
+        echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+        sudo udevadm control --reload-rules
+        sudo udevadm trigger --name-match=kvm
+
+    - name: Build Android App
+      run: |
+        npx react-native build-android --tasks assembleRelease
+
+    - name: Upload Android APK
+      uses: actions/upload-artifact@v4
       with:
-        java-version: '11'
-        distribution: 'zulu'
+        path: android/app/build/outputs/apk/release/app-release.apk
+        name: android-release-apk
 
-    # This is by far the longest step in this job, currently we are building the apk everytime, maybe there should be a more specific trigger for the entire job
-    - name: Build for detox
-      run: npm run e2e:build:android
-
-    # Starts the avd previously set-up by name
-    - name: Android Emulator
-      timeout-minutes: 10
-      continue-on-error: true
+    - name: run tests
+      uses: reactivecircus/android-emulator-runner@v2
+      with:
+        api-level: 29
+        target: google_apis
+        avd-name: "Medium_Phone_API_36.1"
+        script: |
+          $ANDROID_HOME/platform-tools/adb install android/app/build/outputs/apk/release/app-release.apk 
+          $HOME/.maestro/bin/maestro record e2e/maestro/android/shareIntoApp_GoogleAPIs.yaml shareIntoApp_GoogleAPIs.android.mp4 --local
+          
+    - name: Emulator logcat
+      if: failure()
+      # only attempt to logcat if we can still connect to the emu. 
+      # `-d` is important to not stay listening to the log buffer. ask me how I know
       run: |
-        echo "Starting emulator"
-        nohup $ANDROID_HOME/emulator/emulator -avd Pixel_5_API_31_AOSP -no-audio -no-snapshot -no-window -no-boot-anim -timezone America/Los_Angeles &
-        $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
-        $ANDROID_HOME/platform-tools/adb devices
-        $ANDROID_HOME/platform-tools/adb emu geo fix -121.45356 46.51119 4392 12
-        echo "Emulator started"
+        [ "$(adb devices | tail -n +2 | grep -c device)" -eq 1 ] && adb logcat -d > logcat.txt
 
-    - name: Ensure servers are running
-      run: |
-        # is rails running?
-        curl -I --fail "https://staging.inaturalist.org/ping"
-        # is node running & is ES working?
-        curl -I --fail "https://stagingapi.inaturalist.org/v2/taxa"
-
-    # Start the Android e2e tests with extensive logging and screen captures for failing tests
-    - name: Android Detox
-      run: npm run e2e:test:android -- --take-screenshots failing --record-videos failing -l debug
-
-    # The artifacts for the failing tests are available for download on github.com on the page of the individual actions run
-    - name: Store Detox artifacts on test failure
+    - name: Store emulator logcat log on test failure
       uses: actions/upload-artifact@v4
       if: failure()
       with:
-        name: detox-artifacts
-        path: artifacts
+        name: emulator-logcat
+        path: logcat.txt
 
-  notify:
-    name: Notify Slack
-    needs: test
-    if: ${{ success() || failure() }}
-    runs-on: macos-latest
-    steps:
-      - uses: iRoachie/slack-github-actions@v2.3.0
-        if: env.SLACK_WEBHOOK_URL != null
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_BUILDS_WEBHOOK_URL }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Upload test video
+      uses: actions/upload-artifact@v4
+      if: ${{ success() || failure() }}
+      with:
+        path: shareIntoApp_GoogleAPIs.android.mp4
+        name: Android
+
+  # notify:
+  #   name: Notify Slack
+  #   needs: test
+  #   if: ${{ success() || failure() }}
+  #   runs-on: macos-latest
+  #   steps:
+  #     - uses: iRoachie/slack-github-actions@v2.3.0
+  #       if: env.SLACK_WEBHOOK_URL != null
+  #       env:
+  #         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_BUILDS_WEBHOOK_URL }}
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
