--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -73,12 +73,6 @@ jobs:
     #     $HOME/.maestro/bin/maestro --help
     #     npm run add-example-model -- -f=main
 
-    # - name: Enable KVM
-    #   run: |
-    #     echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
-    #     sudo udevadm control --reload-rules
-    #     sudo udevadm trigger --name-match=kvm
-
     # - name: Try fastlane
     #   run: |
     #     cp fastlane/example-Appfile fastlane/Appfile
@@ -92,6 +86,12 @@ jobs:
     #       android/app/build/outputs/apk/release
     #       package.json
     #     name: android-release-apk
+
+    - name: Enable KVM
+      run: |
+        echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+        sudo udevadm control --reload-rules
+        sudo udevadm trigger --name-match=kvm
 
     - uses: actions/download-artifact@v4
       with:
