--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -62,8 +62,13 @@ jobs:
     - name: Move keystore
       run: mv release.keystore android/app/release.keystore
 
+    - uses: actions/setup-node@v3
+      with:
+        node-version-file: '.nvmrc'
+        cache: 'npm'
+
     - name: Install JS dependencies
-      run: npm ci
+      run: npm install
 
     - name: Download the small example cv and geomodel & dependencies
       run: |
@@ -104,7 +109,7 @@ jobs:
         api-level: 29
         target: google_apis
         script: |
-          $ANDROID_HOME/platform-tools/adb install android/app/build/outputs/apk/release/org.inaturalist.iNaturalistMobile-release.apk 
+          $ANDROID_HOME/platform-tools/adb install android/app/build/outputs/apk/release/org.inaturalist.iNaturalistMobile.apk 
           $HOME/.maestro/bin/maestro record e2e/maestro/android/smoke.yaml smoke.android.mp4 --local
           
     - name: Emulator logcat
