--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -84,6 +84,7 @@ jobs:
       uses: gradle/actions/setup-gradle@v5
       with:
         gradle-version: '8.14.1'
+        cache-read-only: ${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/android-ci-after-rn-upgrade' }}
 
     - name: Fastlane Android Build
       run: |
