--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -10,7 +10,7 @@ concurrency:
 jobs:
   build_and_test: 
     # runs-on: macos-15
-    runs-on: ubuntu-24.04-l
+    runs-on: ubuntu-24.04
 
     steps:
     - name: Check out Git repository
