--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -62,10 +62,10 @@ jobs:
     - name: Move keystore
       run: mv release.keystore android/app/release.keystore
 
-    - uses: actions/setup-node@v6
-      with:
-        node-version-file: '.nvmrc'
-        cache: 'npm'
+    # - uses: actions/setup-node@v6
+    #   with:
+    #     node-version-file: '.nvmrc'
+    #     cache: 'npm'
 
     - name: Install JS dependencies
       run: npm install
