--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -13,8 +13,10 @@ jobs:
     runs-on: ubuntu-24.04
 
     steps:
+    - run: df -h .
     - name: Check out Git repository
       uses: actions/checkout@v4
+    - run: df -h .
 
     # Generate the secret files needed for a release build
     - name: Create .env file
@@ -62,6 +64,8 @@ jobs:
     - name: Move keystore
       run: mv release.keystore android/app/release.keystore
 
+    - run: df -h .
+
     - uses: actions/setup-node@v6
       with:
         node-version-file: '.nvmrc'
@@ -78,11 +82,15 @@ jobs:
         gradle-version: '8.14.1'
         cache-read-only: ${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/android-ci-after-rn-upgrade' }}
 
+    - run: df -h .
+
     - name: Install JS dependencies
       run: |
         npm install
         rm -rf node_modules/react-native-pure-jwt
         npm install react-native-pure-jwt
+
+    - run: df -h .
 
     - name: Download the small example cv and geomodel
       run: |
@@ -93,6 +101,8 @@ jobs:
         cp fastlane/example-Appfile fastlane/Appfile
         fastlane android build
 
+    - run: df -h .
+
     - name: Enable KVM
       run: |
         echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
@@ -102,6 +112,8 @@ jobs:
     - name: Install Maestro
       run: |
         export MAESTRO_VERSION="2.0.8"; curl -Ls "https://get.maestro.mobile.dev" | bash
+
+    - run: df -h .
 
     - name: AVD cache
       uses: actions/cache@v4
@@ -123,6 +135,8 @@ jobs:
         disable-animations: false
         script: echo "Generated AVD snapshot for caching."
 
+    - run: df -h .
+
     - name: run tests
       uses: reactivecircus/android-emulator-runner@v2
       with:
@@ -134,6 +148,8 @@ jobs:
         script: |
           $ANDROID_HOME/platform-tools/adb install android/app/build/outputs/apk/release/org.inaturalist.iNaturalistMobile-release.apk 
           $HOME/.maestro/bin/maestro record e2e/maestro/android/smoke.yaml smoke.android.mp4 --local
+
+    - run: df -h .
 
     - name: Emulator logcat
       if: failure()
