--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,71 +24,71 @@ jobs:
         report-path: 'ctrf-report.json'
         github-report: true
         title: 'Unit & Integration Test Results'
-        test-list-report: true
+        # test-list-report: true
         suite-folded-report: true
-        suite-list-report: true
-        use-suite-name: true
-        test-report: true
+        # suite-list-report: true
+        # use-suite-name: true
+        # test-report: true
 
-    - name: Install Node.js, NPM and Yarn
-      uses: actions/setup-node@v4
-      with:
-        node-version: 22
+    # - name: Install Node.js, NPM and Yarn
+    #   uses: actions/setup-node@v4
+    #   with:
+    #     node-version: 22
 
-    - name: Cache node modules
-      uses: actions/cache@v4
-      id: cache
-      with:
-        path: node_modules
-        key: node-modules-${{ hashFiles('**/package-lock.json') }}
+    # - name: Cache node modules
+    #   uses: actions/cache@v4
+    #   id: cache
+    #   with:
+    #     path: node_modules
+    #     key: node-modules-${{ hashFiles('**/package-lock.json') }}
 
-    # supposedly our current cache includes native modules like Realm
-    # that have compiled binaries specific to the environment where they were installed
-    # which might not be the same as the github actions environment
-    # so we need to rebuild them
-    - name: Rebuild native modules
-      if: steps.cache.outputs.cache-hit == 'true'
-      run: npm rebuild
+    # # supposedly our current cache includes native modules like Realm
+    # # that have compiled binaries specific to the environment where they were installed
+    # # which might not be the same as the github actions environment
+    # # so we need to rebuild them
+    # - name: Rebuild native modules
+    #   if: steps.cache.outputs.cache-hit == 'true'
+    #   run: npm rebuild
 
-    - name: Install dependencies
-      if: steps.cache.outputs.cache-hit != 'true'
-      run: npm install
+    # - name: Install dependencies
+    #   if: steps.cache.outputs.cache-hit != 'true'
+    #   run: npm install
 
-    # Need this for linting Ruby
-    - name: Install Ruby and gems
-      uses: ruby/setup-ruby@v1
-      with:
-        bundler-cache: true
+    # # Need this for linting Ruby
+    # - name: Install Ruby and gems
+    #   uses: ruby/setup-ruby@v1
+    #   with:
+    #     bundler-cache: true
 
-    - name: Lint
-      run: npm run lint
+    # - name: Lint
+    #   run: npm run lint
 
-    - name: Unit tests
-      # run regardless of previous linting / testing steps
-      if: ${{ success() || failure() }}
-      run: |
-        npm run test:unit
-        mv artifacts/ctrf-report.json artifacts/unit-ctrf-report.json
+    # - name: Unit tests
+    #   # run regardless of previous linting / testing steps
+    #   if: ${{ success() || failure() }}
+    #   run: |
+    #     npm run test:unit
+    #     mv artifacts/ctrf-report.json artifacts/unit-ctrf-report.json
 
-    - name: Integration tests
-      # run regardless of previous linting / testing steps
-      if: ${{ success() || failure() }}
-      run: |
-        npm run test:integration
-        mv artifacts/ctrf-report.json artifacts/integration-ctrf-report.json
+    # - name: Integration tests
+    #   # run regardless of previous linting / testing steps
+    #   if: ${{ success() || failure() }}
+    #   run: |
+    #     npm run test:integration
+    #     mv artifacts/ctrf-report.json artifacts/integration-ctrf-report.json
 
-    - name: Publish Test Report
-      if: ${{ success() || failure() }}
-      uses: ctrf-io/github-test-reporter@v1
-      with:
-        report-path: 'artifacts/*.json'
-        github-report: true
-        title: 'Unit & Integration Test Results'
-        test-report: true
-        test-list-report: true
-        suite-folded-report: true
-        suite-list-report: true
-        use-suite-name: true
+    # - name: Publish Test Report
+    #   if: ${{ success() || failure() }}
+    #   uses: ctrf-io/github-test-reporter@v1
+    #   with:
+    #     report-path: 'artifacts/*.json'
+    #     github-report: true
+    #     title: 'Unit & Integration Test Results'
+    #     test-report: true
+    #     test-list-report: true
+    #     suite-folded-report: true
+    #     suite-list-report: true
+    #     use-suite-name: true
 
   # notify:
   #   name: Notify Slack
