simplify status checks

--- a/.github/workflows/e2e_ios.yml
+++ b/.github/workflows/e2e_ios.yml
@@ -228,8 +228,8 @@ jobs:
         npm run e2e:test:ios
 
     - name: Run e2e test (retry, with logs)
-      # don't run this if it's status check that failed, but _do_ if first test failed before continue-on-error marked it success
-      if: ${{ ( failure() && steps.status_check.outcome != 'failure' ) || steps.first_test_run.outcome == 'failure' }}
+      # if first_test_run fails, but we `continue-on-error`, failure() is false. so we need to check it's specific _outcome_
+      if: ${{ steps.first_test_run.outcome == 'failure' }}
       run: |
         # provide more debugging context on retry failure
         # we're explicitly not using `detox test --retries` because we want to run them w/ different options
@@ -238,8 +238,8 @@ jobs:
     # The artifacts for the failing tests are available for download on github.com on the page of the individual actions run
     - name: Store Detox artifacts on test failure
       uses: actions/upload-artifact@v4
-      # don't run this if it's status check that failed, but _do_ if first test failed before continue-on-error marked it success
-      if: ${{ ( failure() && steps.status_check.outcome != 'failure' ) || steps.first_test_run.outcome == 'failure' }}
+      # don't run this if it's status check that failed or if our first test run passes (no first_test_run check needed)
+      if: ${{ failure() && steps.status_check.outcome != 'failure' }}
       with:
         name: detox-artifacts
         path: artifacts
