--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@react-navigation/native-stack": "^7.3.25",
     "@realm/react": "^0.20.0",
     "@rozenite/metro": "^1.1.0",
+    "@rozenite/mmkv-plugin": "^1.1.0",
     "@rozenite/network-activity-plugin": "^1.1.0",
     "@rozenite/tanstack-query-plugin": "^1.1.0",
     "@sayem314/react-native-keep-awake": "^1.3.1",
