--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "react-native-localize": "^3.5.2",
     "react-native-logs": "^5.3.0",
     "react-native-mail": "github:chirag04/react-native-mail",
-    "react-native-maps": "1.20.1",
+    "react-native-maps": "^1.26.20",
     "react-native-mmkv": "^3.3.3",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-modal-datetime-picker": "^18.0.0",
