--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@gorhom/bottom-sheet": "^5.2.6",
     "@invertase/react-native-apple-authentication": "^2.4.0",
     "@likashefqet/react-native-image-zoom": "^4.2.0",
-    "@react-native-camera-roll/camera-roll": "github:inaturalist/react-native-cameraroll",
+    "@react-native-camera-roll/camera-roll": "^7.10.2",
     "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-community/geolocation": "^3.4.0",
