--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@rozenite/metro": "^1.1.0",
     "@rozenite/mmkv-plugin": "^1.1.0",
     "@rozenite/network-activity-plugin": "^1.1.0",
-    "@rozenite/require-profiler-plugin": "1.1.0",
+    "@rozenite/require-profiler-plugin": "^1.1.0",
     "@rozenite/tanstack-query-plugin": "^1.1.0",
     "@sayem314/react-native-keep-awake": "^1.3.1",
     "@shopify/flash-list": "^2.2.0",
